--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,13 @@
 [versions]
 agp = "8.13.0"
-kotlin = "1.9.22"
+kotlin = "2.2.0"
+ksp = "2.2.0-1.0.27"
 coreKtx = "1.13.1"
 appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.9.0"
 constraintlayout = "2.1.4"
-room = "2.6.1"
+room = "2.7.0"
 lifecycle = "2.8.0"
 swiperefreshlayout = "1.1.0"
 recyclerview = "1.3.2"
@@ -45,3 +46,5 @@ androidx-arch-core-testing = { group = "androidx.arch.core", name = "core-testin
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
