notifications in working state

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
 
         <!-- Notification Action Receiver -->
         <receiver
-            android:name=".utils.NotificationActionReceiver"
+            android:name=".receiver.NotificationActionReceiver"
             android:enabled="true"
             android:exported="false" >
             <intent-filter>
